0.53     2006-10-24

- Freezing and thawing a DT::TimeZone::OffsetOnly object was broken in
  0.52 (and probably earlier versions as well). Reported by Tatsuhiko
  Miyagawa.


0.52     2006-10-22

- The names_in_country() method no longer sorts the zone
  names. Instead, it returns them in order from most- to
  least-populated.

- Added a STORABLE_attach method for integration with newer versions
  of Storable which provide better support for singletons.

- Made offset_as_seconds() and offset_as_string() work as class
  methods, since the docs say they should. Reported by Tatsuhiko
  Miyagawa.


0.51     2006-10-13

- Added two new catalog-related functions, countries() and
  names_in_country(). Using these functions allows you to map ISO3066
  country codes to the time zones used in that country. Based on code
  by Tatsuhiko Miyagawa.


0.50     2006-10-10

- This release is based on version 2006n of the Olson database.


0.49     2006-10-02

- This release is based on version 2006m of the Olson database.


0.48     2006-09-18

- This release is based on version 2006l of the Olson database.

- Fix finding of local time zone when there is a $SIG{__DIE__} handler
  in effect. The handler broke the internal use of exceptions in one
  of DateTime::TimeZone::Local's methods. Reported by JD Hedden. RT
  #20982.


0.47     2006-08-22

- This release is based on version 2006j of the Olson database.

- Added a link to Asia/Tokyo for the "JST-9" timezone. According to
  Kenichi Ishigaki this is a TZ env var setting commonly used in
  Japan.

- Some links in the Olson data pointed to other links, or pointed to
  non-existent zone names. These have been fixed so that all links
  resolve to valid zones, and this is now part of the test suite.


0.46     2006-05-08

- This release is based on version 2006g of the Olson database.


0.45     2006-05-01

- This release is based on version 2006f of the Olson database.


0.44     2006-04-17
